--- a/mailserver.env
+++ b/mailserver.env
@@ -42,9 +42,9 @@ DMS_VMAIL_GID=
 # FILE => use local files (this is used as the default)
 ACCOUNT_PROVISIONER=
 
-# empty => postmaster@domain.com
+# empty => postmaster@kyriforge.com
 # => Specify the postmaster address
-POSTMASTER_ADDRESS=
+POSTMASTER_ADDRESS=postmaster@kyriforge.com
 
 # Check for updates on container start and then once a day
 # If an update is available, a mail is sent to POSTMASTER_ADDRESS
