--- a/mailserver.env
+++ b/mailserver.env
@@ -40,7 +40,8 @@ DMS_VMAIL_GID=
 # LDAP => use LDAP authentication
 # OIDC => use OIDC authentication (not yet implemented)
 # FILE => use local files (this is used as the default)
-ACCOUNT_PROVISIONER=
+ACCOUNT_PROVISIONER=LDAP
+ENABLE_LDAP=1
 
 # empty => postmaster@kyriforge.com
 # => Specify the postmaster address
@@ -453,40 +454,32 @@ OAUTH2_INTROSPECTION_URL=
 
 # empty => no
 # yes => LDAP over TLS enabled for Postfix
-LDAP_START_TLS=
+LDAP_START_TLS=no
 
 # empty => mail.example.com
 # Specify the `<dns-name>` / `<ip-address>` where the LDAP server is reachable via a URI like: `ldaps://mail.example.com`.
 # Note: You must include the desired URI scheme (`ldap://`, `ldaps://`, `ldapi://`).
-LDAP_SERVER_HOST=
+LDAP_SERVER_HOST=openldap
+LDAP_SERVER_PORT=389
 
 # empty => ou=people,dc=domain,dc=com
 # => e.g. LDAP_SEARCH_BASE=dc=mydomain,dc=local
-LDAP_SEARCH_BASE=
+LDAP_SEARCH_BASE=dc=kyriforge,dc=com
 
 # empty => cn=admin,dc=domain,dc=com
 # => take a look at examples of SASL_LDAP_BIND_DN
-LDAP_BIND_DN=
+LDAP_BIND_DN=cn=admin,dc=kyriforge,dc=com
 
 # empty** => admin
 # => Specify the password to bind against ldap
-LDAP_BIND_PW=
+LDAP_BIND_PW=R3h!V7p&B9m#X4q@T2dL
 
 # e.g. `"(&(mail=%s)(mailEnabled=TRUE))"`
-# => Specify how ldap should be asked for users
-LDAP_QUERY_FILTER_USER=
-
-# e.g. `"(&(mailGroupMember=%s)(mailEnabled=TRUE))"`
-# => Specify how ldap should be asked for groups
-LDAP_QUERY_FILTER_GROUP=
-
-# e.g. `"(&(mailAlias=%s)(mailEnabled=TRUE))"`
-# => Specify how ldap should be asked for aliases
-LDAP_QUERY_FILTER_ALIAS=
-
-# e.g. `"(&(|(mail=*@%s)(mailalias=*@%s)(mailGroupMember=*@%s))(mailEnabled=TRUE))"`
-# => Specify how ldap should be asked for domains
-LDAP_QUERY_FILTER_DOMAIN=
+# Filters for lookups
+LDAP_QUERY_FILTER_USER="(&(mail=%s)(mailEnabled=TRUE))"
+LDAP_QUERY_FILTER_GROUP="(&(mailGroupMember=%s)(mailEnabled=TRUE))"
+LDAP_QUERY_FILTER_ALIAS="(&(mailAlias=%s)(mailEnabled=TRUE))"
+LDAP_QUERY_FILTER_DOMAIN="(&(|(mail=*@%s)(mailalias=*@%s)(mailGroupMember=*@%s))(mailEnabled=TRUE))"
 
 # -----------------------------------------------
 # --- Dovecot Section ---------------------------
@@ -494,13 +487,13 @@ LDAP_QUERY_FILTER_DOMAIN=
 
 # empty => no
 # yes => LDAP over TLS enabled for Dovecot
-DOVECOT_TLS=
+DOVECOT_TLS=no
 
 # e.g. `"(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"`
-DOVECOT_USER_FILTER=
+DOVECOT_USER_FILTER="(&(objectClass=inetOrgPerson)(uid=%u))"
 
 # e.g. `"(&(objectClass=PostfixBookMailAccount)(uniqueIdentifier=%n))"`
-DOVECOT_PASS_FILTER=
+DOVECOT_PASS_FILTER="(&(objectClass=inetOrgPerson)(uid=%u))"
 
 # Define the mailbox format to be used
 # default is maildir, supported values are: sdbox, mdbox, maildir
@@ -509,7 +502,7 @@ DOVECOT_MAILBOX_FORMAT=maildir
 # empty => no
 # yes => Allow bind authentication for LDAP
 # https://doc.dovecot.org/2.4.0/core/config/auth/databases/ldap.html#authentication-bind
-DOVECOT_AUTH_BIND=
+DOVECOT_AUTH_BIND=yes
 
 # -----------------------------------------------
 # --- Postgrey Section --------------------------
@@ -529,7 +522,7 @@ POSTGREY_AUTO_WHITELIST_CLIENTS=5
 # --- SASL Section ------------------------------
 # -----------------------------------------------
 
-ENABLE_SASLAUTHD=0
+ENABLE_SASLAUTHD=1
 
 # empty => pam
 # `ldap` => authenticate against ldap server
@@ -537,38 +530,27 @@ ENABLE_SASLAUTHD=0
 # `mysql` => authenticate against mysql db
 # `rimap` => authenticate against imap server
 # Note: can be a list of mechanisms like pam ldap shadow
-SASLAUTHD_MECHANISMS=
+SASLAUTHD_MECHANISMS=ldap
 
 # empty => None
 # e.g. with SASLAUTHD_MECHANISMS rimap you need to specify the ip-address/servername of the imap server  ==> xxx.xxx.xxx.xxx
 SASLAUTHD_MECH_OPTIONS=
 
-# empty => Use value of LDAP_SERVER_HOST
-# Note: You must include the desired URI scheme (`ldap://`, `ldaps://`, `ldapi://`).
-SASLAUTHD_LDAP_SERVER=
-
-# empty => Use value of LDAP_BIND_DN
-# specify an object with privileges to search the directory tree
-# e.g. active directory: SASLAUTHD_LDAP_BIND_DN=cn=Administrator,cn=Users,dc=mydomain,dc=net
-# e.g. openldap: SASLAUTHD_LDAP_BIND_DN=cn=admin,dc=mydomain,dc=net
-SASLAUTHD_LDAP_BIND_DN=
-
-# empty => Use value of LDAP_BIND_PW
-SASLAUTHD_LDAP_PASSWORD=
-
-# empty => Use value of LDAP_SEARCH_BASE
-# specify the search base
-SASLAUTHD_LDAP_SEARCH_BASE=
+# LDAP connection for saslauthd
+SASLAUTHD_LDAP_SERVER=ldap://openldap:389
+SASLAUTHD_LDAP_BIND_DN=cn=admin,dc=kyriforge,dc=com
+SASLAUTHD_LDAP_PASSWORD=R3h!V7p&B9m#X4q@T2dL
+SASLAUTHD_LDAP_SEARCH_BASE=dc=kyriforge,dc=com
 
 # empty => default filter `(&(uniqueIdentifier=%u)(mailEnabled=TRUE))`
 # e.g. for active directory: `(&(sAMAccountName=%U)(objectClass=person))`
 # e.g. for openldap: `(&(uid=%U)(objectClass=person))`
-SASLAUTHD_LDAP_FILTER=
+SASLAUTHD_LDAP_FILTER="(&(uid=%u)(objectClass=inetOrgPerson))"
 
 # empty => no
 # yes => LDAP over TLS enabled for SASL
 # If set to yes, the protocol in SASLAUTHD_LDAP_SERVER must be ldap:// or missing.
-SASLAUTHD_LDAP_START_TLS=
+SASLAUTHD_LDAP_START_TLS=no
 
 # empty => no
 # yes => Require and verify server certificate
